feat: 优化社区技能互助平台
Co-authored-by: traeagent <traeagent@users.noreply.github.com>